--- a/package.json
+++ b/package.json
@@ -9,9 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.5",
+    "axios": "^1.2.2",
+    "cookie": "^0.5.0",
+    "framer-motion": "^8.5.5",
     "next": "13.1.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "socket.io-client": "^4.5.4",
+    "timeago.js": "^4.0.2"
   },
   "devDependencies": {
     "eslint": "8.31.0",
